# PicoPAC

./: PicoPAC_cart.uf2  README.md
3dPrint/: PicoPAC-Base (Meshed).stl  PicoPAC-Base.stl  PicoPAC.FCStd  PicoPAC_top-Cover (Meshed).stl  PicoPAC_top.FCStd  o2picocartlogo2.stl
3dPrint/Alternate/: PicoPAC_1.stl  PicoPAC_2.stl
Kicad/: PicoPAC.dsn  PicoPAC.kicad_pcb  PicoPAC.kicad_prl  PicoPAC.kicad_pro  PicoPAC.kicad_sch  PicoPAC.pro  PicoPAC.rules  PicoPAC.sch  PicoPAC.ses  fp-info-cache  fp-lib-table  idt7006pf-pn64.kicad_sym  idt7006pf-pn64.lib  sym-lib-table  videopac-edgecon.kicad_mod  videopac-edgeconnector.kicad_sym  videopac.lib
Kicad/jlcpcb/: project.db
Kicad/jlcpcb/gerber/: PicoPAC-CuBottom.gbr  PicoPAC-CuTop.gbr  PicoPAC-EdgeCuts.gbr  PicoPAC-MaskBottom.gbr  PicoPAC-MaskTop.gbr  PicoPAC-NPTH.drl  PicoPAC-PTH.drl  PicoPAC-PasteBottom.gbr  PicoPAC-PasteTop.gbr  PicoPAC-SilkBottom.gbr  PicoPAC-SilkTop.gbr  PicoPAC-VScore.gbr
Kicad/jlcpcb/production_files/: BOM-PicoPAC.csv  CPL-PicoPAC.csv
VSC-PicoPAC/: CMakeLists.txt  fatfs_disk.c  fatfs_disk.h  filelist.h  flash_fs.c  flash_fs.h  gamelist.h  main.c  msc_disk.c  picopac_cart.c  picopac_cart.h
selectgame/: c.bat  g7000.h  selectgame.bin.old  text-engine_V31.asm
